--- a/.github/workflows/ci-docker.yml
+++ b/.github/workflows/ci-docker.yml
@@ -35,22 +35,12 @@ jobs:
         id: buildx
         uses: docker/setup-buildx-action@v2
       -
-        name: Set Docker Image Tag
-        id: set_tag
-        run: |
-          if [[ "${{ github.event_name }}" == "schedule" ]]; then
-            echo "IMAGE_TAG=antsx/antspy:nightly" >> $GITHUB_ENV
-          else
-            TAG=${{ steps.meta.outputs.tags }}
-            echo "IMAGE_TAG=${TAG}" >> $GITHUB_ENV
-          fi
-      - 
         name: Build and push
         uses: docker/build-push-action@v4
         with:
           context: .
           platforms: linux/amd64
           push: ${{ github.repository == 'ANTsX/ANTsPy' }}
-          tags: ${{ env.IMAGE_TAG }}
+          tags: ${{ github.event_name == 'schedule' && 'antsx/antspy:nightly' || steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
