CI: Set docker tag update logic
Update latest only on tag, 'nightly' for nightly build, branch name for workflow_dispatch builds

--- a/.github/workflows/ci-docker.yml
+++ b/.github/workflows/ci-docker.yml
@@ -20,6 +20,10 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: antsx/antspy
+          flavor: |
+            latest=${{ startsWith(github.ref, 'refs/tags/v') }}
+          tags: |
+            type=semver,pattern={{version}}
       -
         name: Login to DockerHub
         if: ${{ github.repository == 'ANTsX/ANTsPy' }}
