--- a/.github/workflows/ci-docker.yml
+++ b/.github/workflows/ci-docker.yml
@@ -20,10 +20,6 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: antsx/antspy
-          flavor: |
-            latest=${{ startsWith(github.ref, 'refs/tags/v') }}
-          tags: |
-            type=semver,pattern={{version}}
       -
         name: Login to DockerHub
         if: ${{ github.repository == 'ANTsX/ANTsPy' }}
@@ -45,6 +41,5 @@ jobs:
           context: .
           platforms: linux/amd64
           push: ${{ github.repository == 'ANTsX/ANTsPy' }}
-          tags: ${{ github.event_name == 'schedule' && 'antsx/antspy:nightly' || steps.meta.outputs.tags }}
+          tags: ${{ github.event_name == 'schedule' && 'antsx/antspy:nightly,antsx/antspy:latest' || steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-
