--- a/.github/workflows/ci-pytest.yml
+++ b/.github/workflows/ci-pytest.yml
@@ -8,7 +8,9 @@ on:
     branches:
       - master
   pull_request:
-    types: [synchronize, edited]
+    branches:
+      - master
+
   workflow_dispatch:
 
 env:
@@ -18,9 +20,18 @@ env:
 jobs:
   test:
     runs-on: ubuntu-20.04
+    defaults:
+      run:
+        shell: bash -el {0}
     steps:
       - uses: actions/checkout@v2.3.4
       - uses: actions/setup-python@v5
 
       - name: Install package
         run: python -m pip -v install .
+
+      - name: Install coverage
+        run: python -m pip install coverage
+
+      - name: Test package
+        run: tests/run_tests.sh -c
