--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "scikit_build_core.build"
 
 [project]
 name = "antspy"
-version = "0.5.0"
-description = "An example minimal project that compiles bindings using nanobind and scikit-build"
+version = "0.6.0"
+description = "A fast medical imaging library with comprehensive processing algorithms"
 readme = "README.md"
 requires-python = ">=3.8"
 authors = [
