--- a/.github/workflows/ci-pytest.yml
+++ b/.github/workflows/ci-pytest.yml
@@ -31,7 +31,7 @@ jobs:
         run: python -m pip -v install .
 
       - name: Install dependencies
-        run: python -m pip -r install requirements.txt
+        run: python -m pip install -r requirements.txt
 
       - name: Install coverage
         run: python -m pip install coverage
