--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ authors = [
 classifiers = [
     "License :: OSI Approved :: BSD License",
 ]
+dynamic = ["dependencies"]
 
 [project.urls]
 Homepage = "https://github.com/antsx/antspy"
@@ -33,6 +34,8 @@ cmake.args = []
 
 wheel.packages = ["ants"]
 
+[tool.setuptools.dynamic]
+dependencies = {file = ["requirements.txt"]}
 
 [tool.cibuildwheel]
 # Necessary to see build output from the actual compilation
