--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2", "numpy"]
+requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
 build-backend = "scikit_build_core.build"
 
 [project]
@@ -14,7 +14,7 @@ authors = [
 classifiers = [
     "License :: OSI Approved :: BSD License",
 ]
-dependenices = [
+dependencies = [
     "pandas",
     "pyyaml",
     "numpy",
