add functions for plotting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -83,6 +83,7 @@
     "unordered_set": "cpp",
     "valarray": "cpp",
     "variant": "cpp",
-    "*.in": "cpp"
+    "*.in": "cpp",
+    "*.inc": "cpp"
   }
 }
