--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,13 +3,13 @@ requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
 build-backend = "scikit_build_core.build"
 
 [project]
-name = "antspy"
+name = "antspyx"
 version = "0.5.3"
-description = "A fast medical imaging library with comprehensive processing algorithms"
+description = "A fast medical imaging analysis library in Python with algorithms for registration, segmentation, and more."
 readme = "README.md"
 requires-python = ">=3.8"
 authors = [
-    { name = "ANTs", email = "info@ants.dev" }
+    { name = "Brian B. Avants", email = "stnava@gmail.com" }
 ]
 classifiers = [
     "License :: OSI Approved :: BSD License",
