--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -20,10 +20,6 @@ jobs:
 
           # Windows 64-bit
           - os: windows-latest
-            python: '3.8'
-            cibw_python: 38
-            platform_id: win_amd64
-          - os: windows-latest
             python: '3.9'
             cibw_python: 39
             platform_id: win_amd64
@@ -42,10 +38,6 @@ jobs:
 
           # Linux 64-bit
           - os: ubuntu-latest
-            python: '3.8'
-            cibw_python: 38
-            platform_id: manylinux_x86_64
-          - os: ubuntu-latest
             python: '3.9'
             cibw_python: 39
             platform_id: manylinux_x86_64
@@ -63,11 +55,6 @@ jobs:
             platform_id: manylinux_x86_64
 
           # macOS on Intel 64-bit
-          - os: macos-12
-            python: '3.8'
-            cibw_python: 38
-            arch: x86_64
-            platform_id: macosx_x86_64
           - os: macos-12
             python: '3.9'
             cibw_python: 39
@@ -122,22 +109,22 @@ jobs:
         uses: ilammy/msvc-dev-cmd@v1
 
       - name: Install cibuildwheel
-        run: python -m pip install cibuildwheel==2.16.2 setuptools
+        run: python -m pip install cibuildwheel==2.16.2 poetry 
 
       - name: Get package name and version (Linux / Mac)
         if: ${{ ! startsWith(matrix.os, 'windows-') }}
         run: |
-          echo PACKAGE_NAME=$( python setup.py --name ) >> $GITHUB_ENV
-          echo PACKAGE_VERSION=$( python setup.py --version ) >> $GITHUB_ENV
+          echo PACKAGE_NAME=$(poetry version --name) >> $GITHUB_ENV
+          echo PACKAGE_VERSION=$(poetry version --short) >> $GITHUB_ENV
 
       # Some shells require "-Encoding utf8" to append to GITHUB_ENV
       # https://docs.github.com/en/actions/using-workflows/workflow-commands-for-github-actions?tool=powershell#environment-files
       - name: Get package name and version (Windows)
         if: startsWith(matrix.os, 'windows-')
         run: |
-          echo "PACKAGE_NAME=$( python setup.py --name )" | Out-File -FilePath $env:GITHUB_ENV `
+          echo "PACKAGE_NAME=$( poetry version --name )" | Out-File -FilePath $env:GITHUB_ENV `
           -Append
-          echo "PACKAGE_VERSION=$( python setup.py --version )" | Out-File -FilePath $env:GITHUB_ENV `
+          echo "PACKAGE_VERSION=$( poetry version --short )" | Out-File -FilePath $env:GITHUB_ENV `
           -Append
       - name: Build wheels
         env:
