--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,9 @@
 [build-system]
-requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
+requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2", "setuptools_scm"]
 build-backend = "scikit_build_core.build"
 
 [project]
 name = "antspyx"
-version = "0.5.3"
 description = "A fast medical imaging analysis library in Python with algorithms for registration, segmentation, and more."
 readme = "README.md"
 requires-python = ">=3.8"
@@ -27,6 +26,8 @@ dependencies = [
     "nibabel",
     "requests"
 ]
+dynamic = ["version"]
+
 
 [project.urls]
 Homepage = "https://github.com/antsx/antspy"
@@ -60,3 +61,7 @@ test-skip="cp38-macosx_*:arm64"
 # Needed for full C++17 support
 [tool.cibuildwheel.macos.environment]
 MACOSX_DEPLOYMENT_TARGET = "10.14"
+
+[tool.setuptools_scm]
+tag_regex = '^v(.+)$'
+
