ENH: Update CI and scikit-build-core

--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -122,22 +122,22 @@ jobs:
         uses: ilammy/msvc-dev-cmd@v1
 
       - name: Install cibuildwheel
-        run: python -m pip install cibuildwheel==2.16.2 setuptools
+        run: python -m pip install cibuildwheel==2.18.0 setuptools toml
 
       - name: Get package name and version (Linux / Mac)
         if: ${{ ! startsWith(matrix.os, 'windows-') }}
         run: |
-          echo PACKAGE_NAME=$( python setup.py --name ) >> $GITHUB_ENV
-          echo PACKAGE_VERSION=$( python setup.py --version ) >> $GITHUB_ENV
+          echo PACKAGE_NAME=$( python -c "import toml; print(toml.load('pyproject.toml')['project']['name'])" ) >> $GITHUB_ENV
+          echo PACKAGE_VERSION=$( python -c "import toml; print(toml.load('pyproject.toml')['project']['version'])" ) >> $GITHUB_ENV
 
       # Some shells require "-Encoding utf8" to append to GITHUB_ENV
       # https://docs.github.com/en/actions/using-workflows/workflow-commands-for-github-actions?tool=powershell#environment-files
       - name: Get package name and version (Windows)
         if: startsWith(matrix.os, 'windows-')
         run: |
-          echo "PACKAGE_NAME=$( python setup.py --name )" | Out-File -FilePath $env:GITHUB_ENV `
+          echo "PACKAGE_NAME=$( python -c "import toml; print(toml.load('pyproject.toml')['project']['name'])" )" | Out-File -FilePath $env:GITHUB_ENV `
           -Append
-          echo "PACKAGE_VERSION=$( python setup.py --version )" | Out-File -FilePath $env:GITHUB_ENV `
+          echo "PACKAGE_VERSION=$( python -c "import toml; print(toml.load('pyproject.toml')['project']['version'])" ) | Out-File -FilePath $env:GITHUB_ENV `
           -Append
       - name: Build wheels
         env:
