--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -137,6 +137,13 @@ jobs:
         run: |
           echo "PACKAGE_NAME=$( python -c "import toml; print(toml.load('pyproject.toml')['project']['name'])" )" | Out-File -FilePath $env:GITHUB_ENV ` -Append
           echo "PACKAGE_VERSION=$( python -c "import toml; print(toml.load('pyproject.toml')['project']['version'])" )" | Out-File -FilePath $env:GITHUB_ENV ` -Append
+
+      - name: Determine macOS version
+        if: startsWith(matrix.os, 'macos-')
+        run: |
+          macos_version=$(sw_vers -productVersion | awk -F '.' '{print $1".0"}')
+          echo "MACOSX_DEPLOYMENT_TARGET=${macos_version}" >> $GITHUB_ENV
+
       - name: Build wheels
         env:
           CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
@@ -158,7 +165,7 @@ jobs:
           CIBW_ARCHS_MACOS: ${{ matrix.arch }}
 
           CIBW_ENVIRONMENT_MACOS: |
-            CMAKE_OSX_ARCHITECTURES=${{ matrix.arch }} CMAKE_PREFIX_PATH=/usr/local MACOSX_DEPLOYMENT_TARGET=$( sw_vers -productVersion | awk -F '.' '{print $1".0"}' )
+            CMAKE_OSX_ARCHITECTURES=${{ matrix.arch }} CMAKE_PREFIX_PATH=/usr/local
 
           CIBW_BEFORE_ALL_MACOS: |
             python -m pip install cmake ninja setuptools
