--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -19,92 +19,92 @@ jobs:
           # Need to quote decimal versions as string to avoid the "Norway problem"
 
           # Windows 64-bit
-        #   - os: windows-latest
-        #     python: '3.8'
-        #     cibw_python: 38
-        #     platform_id: win_amd64
-        #   - os: windows-latest
-        #     python: '3.9'
-        #     cibw_python: 39
-        #     platform_id: win_amd64
-        #   - os: windows-latest
-        #     python: '3.10'
-        #     cibw_python: 310
-        #     platform_id: win_amd64
+          - os: windows-latest
+            python: '3.8'
+            cibw_python: 38
+            platform_id: win_amd64
+          - os: windows-latest
+            python: '3.9'
+            cibw_python: 39
+            platform_id: win_amd64
+          - os: windows-latest
+            python: '3.10'
+            cibw_python: 310
+            platform_id: win_amd64
           - os: windows-latest
             python: '3.11'
             cibw_python: 311
             platform_id: win_amd64
-        #   - os: windows-latest
-        #     python: '3.12'
-        #     cibw_python: 312
-        #     platform_id: win_amd64
+          - os: windows-latest
+            python: '3.12'
+            cibw_python: 312
+            platform_id: win_amd64
 
           # Linux 64-bit
-        #   - os: ubuntu-latest
-        #     python: '3.8'
-        #     cibw_python: 38
-        #     platform_id: manylinux_x86_64
-        #   - os: ubuntu-latest
-        #     python: '3.9'
-        #     cibw_python: 39
-        #     platform_id: manylinux_x86_64
-        #   - os: ubuntu-latest
-        #     python: '3.10'
-        #     cibw_python: 310
-        #     platform_id: manylinux_x86_64
+          - os: ubuntu-latest
+            python: '3.8'
+            cibw_python: 38
+            platform_id: manylinux_x86_64
+          - os: ubuntu-latest
+            python: '3.9'
+            cibw_python: 39
+            platform_id: manylinux_x86_64
+          - os: ubuntu-latest
+            python: '3.10'
+            cibw_python: 310
+            platform_id: manylinux_x86_64
           - os: ubuntu-latest
             python: '3.11'
             cibw_python: 311
             platform_id: manylinux_x86_64
-        #   - os: ubuntu-latest
-        #     python: '3.12'
-        #     cibw_python: 312
-        #     platform_id: manylinux_x86_64
+          - os: ubuntu-latest
+            python: '3.12'
+            cibw_python: 312
+            platform_id: manylinux_x86_64
 
           # macOS on Intel 64-bit
-        #   - os: macos-12
-        #     python: '3.8'
-        #     cibw_python: 38
-        #     arch: x86_64
-        #     platform_id: macosx_x86_64
-        #   - os: macos-12
-        #     python: '3.9'
-        #     cibw_python: 39
-        #     arch: x86_64
-        #     platform_id: macosx_x86_64
-        #   - os: macos-12
-        #     python: '3.10'
-        #     cibw_python: 310
-        #     arch: x86_64
-        #     platform_id: macosx_x86_64
+          - os: macos-12
+            python: '3.8'
+            cibw_python: 38
+            arch: x86_64
+            platform_id: macosx_x86_64
+          - os: macos-12
+            python: '3.9'
+            cibw_python: 39
+            arch: x86_64
+            platform_id: macosx_x86_64
+          - os: macos-12
+            python: '3.10'
+            cibw_python: 310
+            arch: x86_64
+            platform_id: macosx_x86_64
           - os: macos-12
             python: '3.11'
             cibw_python: 311
             arch: x86_64
             platform_id: macosx_x86_64
-        #   - os: macos-12
-        #     python: '3.12'
-        #     cibw_python: 312
-        #     arch: x86_64
-        #     platform_id: macosx_x86_64
+          - os: macos-12
+            python: '3.12'
+            cibw_python: 312
+            arch: x86_64
+            platform_id: macosx_x86_64
 
           # macOS on Apple M1 64-bit, supported for Python 3.10 and later
-        #   - os: macos-14
-        #     python: '3.10'
-        #     cibw_python: 310
-        #     arch: arm64
-        #     platform_id: macosx_arm64
+          - os: macos-14
+            python: '3.10'
+            cibw_python: 310
+            arch: arm64
+            platform_id: macosx_arm64
           - os: macos-14
             python: '3.11'
             cibw_python: 311
             arch: arm64
             platform_id: macosx_arm64
-        #   - os: macos-14
-        #     python: '3.12'
-        #     cibw_python: 312
-        #     arch: arm64
-        #     platform_id: macosx_arm64
+          - os: macos-14
+            python: '3.12'
+            cibw_python: 312
+            arch: arm64
+            platform_id: macosx_arm64
 
     steps:
       - uses: actions/checkout@v4
