ENH: Build changes suggested by @ncullen93

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,7 @@ set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 # Try to import all Python components potentially needed by nanobind
 find_package(Python 3.8
-  REQUIRED COMPONENTS Interpreter Development.Module
-  OPTIONAL_COMPONENTS Development.SABIModule)
+  REQUIRED COMPONENTS Interpreter Development.Module)
 
 # Import nanobind through CMake's find_package mechanism
 find_package(nanobind CONFIG REQUIRED)
@@ -40,10 +39,9 @@ add_library(imageMathUtilities STATIC  src/antscore/ImageMathHelper2D.cxx src/an
 target_link_libraries(antsUtilities ${ITK_LIBRARIES})
 target_link_libraries(registrationUtilities ${ITK_LIBRARIES})
 target_link_libraries(imageMathUtilities ${ITK_LIBRARIES})
-                                 
+
 nanobind_add_module(
   lib
-  STABLE_ABI
   NB_STATIC
   src/main.cpp
   src/antscore/antsAffineInitializer.cxx
