--- a/.github/workflows/ci-pytest.yml
+++ b/.github/workflows/ci-pytest.yml
@@ -43,12 +43,10 @@ jobs:
         run: |
           conda create -n antspy-env python=${{ env.python_version }} -y
           conda activate antspy-env
-          conda install -c conda-forge conda-pack coverage
+          conda install -c conda-forge coverage
           conda info
           pip install ./antspy-pr
           conda list
-          antspy-pr/tests/run_tests.sh -c
-          conda pack -n antspy-env -o ~/conda-env.tar.bz2
 
       - name: Run tests
         run: |
