--- a/.github/workflows/wheels_faster.yml
+++ b/.github/workflows/wheels_faster.yml
@@ -112,9 +112,10 @@ jobs:
 
       - name: Install and test (Windows)
         if: startsWith(matrix.os, 'windows-')
+        shell: bash
         run: |
-          python -m pip install --find-links=.\wheelhouse\cp${{ matrix.cibw_python }}-${{matrix.platform_id }} antspyx
-          tests\run_tests.ps1
+          python -m pip install --find-links=./wheelhouse/cp${{ matrix.cibw_python }}-${{ matrix.platform_id }} antspyx
+          bash tests/run_tests.sh
 
       - uses: actions/upload-artifact@v3
         with:
