--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ authors = [
     { name = "Brian B. Avants", email = "stnava@gmail.com" }
 ]
 classifiers = [
-    "License :: OSI Approved :: BSD License",
+    "License :: OSI Approved :: Apache Software License",
 ]
 dependencies = [
     "pandas",
