WIP: Trying bash

--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -142,6 +142,7 @@ jobs:
           echo "MACOSX_DEPLOYMENT_TARGET=${{ matrix.macos_target }}" >> $GITHUB_ENV
 
       - name: Build wheels
+        shell: bash -el {0}
         env:
           CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
           CIBW_MANYLINUX_I686_IMAGE: manylinux2014
