--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -119,6 +119,7 @@ jobs:
           python-version: ${{ matrix.python }}
 
       - name: Install cibuildwheel
+        shell: bash -el {0}
         run: python -m pip install cibuildwheel==2.19.2 setuptools toml
 
       - name: Get package name and version (Linux / Mac)
@@ -164,7 +165,7 @@ jobs:
           CIBW_ARCHS_MACOS: ${{ matrix.arch }}
 
           CIBW_ENVIRONMENT_MACOS: |
-            CMAKE_OSX_ARCHITECTURES=${{ matrix.arch }} CMAKE_PREFIX_PATH=/usr/local
+            CMAKE_OSX_ARCHITECTURES=${{ matrix.arch }}
 
           CIBW_BEFORE_ALL_MACOS: |
             python -m pip install cmake ninja setuptools
@@ -174,6 +175,7 @@ jobs:
 
       - name: Install and test (Linux / Mac)
         if: ${{ ! startsWith(matrix.os, 'windows-') }}
+        shell: bash -el {0}
         run: |
           python -m pip install wheelhouse/cp${{ matrix.cibw_python }}-${{matrix.platform_id }}/*.whl
           tests/run_tests.sh
