COMP: downgrade numpy for arm64
Latest numpy and statsmodels don't play nicely together

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ classifiers = [
 dependencies = [
     "pandas",
     "pyyaml",
-    "numpy",
+    "numpy==2.0.1",
     "statsmodels",
     "webcolors",
     "matplotlib",
