CI: Remove defaults

--- a/.github/workflows/ci-pytest.yml
+++ b/.github/workflows/ci-pytest.yml
@@ -30,6 +30,7 @@ jobs:
           auto-update-conda: true
           activate-environment: "test-env"
           channels: conda-forge
+          conda-remove-defaults: "true"
           channel-priority: strict
 
       - name: Configure Conda to use only .tar.bz2
